--- a/ProjectManagementSystem/ProjectManagementSystem.csproj
+++ b/ProjectManagementSystem/ProjectManagementSystem.csproj
@@ -7,6 +7,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Views\Defect\**" />
+	  <Content Remove="Views\Defect\**" />
+	  <EmbeddedResource Remove="Views\Defect\**" />
+	  <None Remove="Views\Defect\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<None Include="wwwroot\assets\bootstrap-select-1.14.0-beta3\.github\FUNDING.yml" />
 		<None Include="wwwroot\assets\bootstrap-select-1.14.0-beta3\.github\ISSUE_TEMPLATE\bug_report.md" />
 		<None Include="wwwroot\assets\bootstrap-select-1.14.0-beta3\.github\ISSUE_TEMPLATE\feature_request.md" />
@@ -29,10 +36,6 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup>
-		<Folder Include="Views\Defect\" />
 	</ItemGroup>
 
 </Project>
