初步实现发消息

--- a/ProjectManagementSystem/ProjectManagementSystem.csproj
+++ b/ProjectManagementSystem/ProjectManagementSystem.csproj
@@ -32,6 +32,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Folder Include="Views\Shared\Components\" />
 	  <Folder Include="wwwroot\document\" />
 	</ItemGroup>
 
